# Django-Rest-Framework

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  env.dev  env.test  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: admin.py
order/migrations/: 0001_initial.py  0002_alter_order_options.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: __init__.py
order/tests/test_viewsets/: test_order_viewset.py
product/: admin.py  tests.py
product/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: __init__.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
