[tool.poetry]
name = "django-rest-framework"
version = "0.1.0"
description = "Django Rest Framework API"
authors = ["Rodrigo Cinelli <rodcinelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
black = "^24.10.0"
factory-boy = "^3.3.1"
pytest = "^8.3.4"
django = "^5.1.4"
djangorestframework = "^3.15.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
